# vmec-utilities

./: .gitignore  README.md  example_in.py  setup.cfg
docs/: conf.py  index.rst  quickstart.rst  reference.rst
src/VMEC_Reader/: __init__.py  transformations.py  utils.py
src/VMEC_Reader/input/: __init__.py  coils.py  data.py  helpers.py  parameters.py  parser.py  plotting.py  profiles.py  surface.py
src/VMEC_Reader/input/files/: bootin_descriptions.txt  indata_descriptions.txt  input.DEFAULT  sections.py
src/VMEC_Reader/output/: __init__.py  description.py  parser.py
src/VMEC_Reader/output/files/: out_long_names.toml  out_short_names.toml
src/VMEC_Reader/plot/: __init__.py  profiles.py  surfaces.py
