[metadata]
name = VMEC_Reader
author = Joachim Koerfer
# description = 
long-description = file: README.md
long-description-content-type = text/x-rst; charset=UTF-8
project_urls =
    Source Code = https://c4science.ch/source/VMEC_Reader/

version = 0.0.1

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >= 3.6
install_requires =
    black
    numpy
    scipy
    sphinx
    sphinx_rtd_theme
    numba

[options.packages.find]
where = src

[build-system]
requires = ["setuptools>=41.0.0", "wheel"]

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
norecursedirs =
    dist
    build
    .tox
testpaths = tests

# [build_sphinx]
# source_dir = docs
# build_dir = build/sphinx
# warning-is-error = True

[flake8]
# Some sane defaults for the code style checker flake8
max-line-length = 100
exclude =
    .tox
    build
    dist
    .eggs